# vision-and-image-processing

./: .editorconfig  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
nootbooks/: analyze-image.ipynb  blure.ipynb  convulsions.ipynb  display-images.ipynb  fix-gama-v2.ipynb  live-changes.ipynb
nootbooks/.ipynb_checkpoints/: base-checkpoint.ipynb  live-changes-checkpoint.ipynb  tested-checkpoint.ipynb
nootbooks/basic/: blure.ipynb  fix-gama-v2.ipynb  live-changes.ipynb  load-and-resize.ipynb
src/: config.py  image_analize.py  image_math.py  image_transformations.py  load_images.py  show_images.py
src/.ipynb_checkpoints/: load_images-checkpoint.py  show_images-checkpoint.py
