[tool.poetry]
name = "vision-image"
version = "0.1.0"
description = ""
authors = ["Omer Priel <omer.priel2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
openimages = "^0.0.1"
awscli = "^1.27.89"
ipywidgets = "^8.0.4"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
